--- a/source/blocks/about/about.styl
+++ b/source/blocks/about/about.styl
@@ -9,6 +9,7 @@
     margin auto
     border 0.0625rem solid #3d6cb0
     border-radius 8.55rem
+    margin-bottom 2.1rem
   &__image
     width 14.9rem
     height 14.9rem
@@ -16,8 +17,7 @@
     background #3d6cb0
     margin 1.1rem
   &__name
-    margin 3.1rem 0 0 0
-    line-height 2.125rem
+    line-height 3.3rem
     text-align center
     font-size 4.1rem
     text-transform uppercase
@@ -31,3 +31,4 @@
     font-size 1.8rem
     font-weight bold
     text-transform uppercase
+    margin-bottom 1rem
