--- a/source/blocks/contact/contact.styl
+++ b/source/blocks/contact/contact.styl
@@ -24,3 +24,5 @@
     font-weight bold
   &__cell_case_upper
     text-transform uppercase
+  &__cell_word-break_normal
+    word-break normal
