--- a/source/blocks/content-list__item/content-list.styl
+++ b/source/blocks/content-list__item/content-list.styl
@@ -22,6 +22,7 @@
     padding-top 0.357rem
     font-size 1.14rem
     line-height 1.365rem
+    word-break normal
 
 .content-list
   list-style-image url(images/list-item-dot.png)
