--- a/source/blocks/profile/profile.styl
+++ b/source/blocks/profile/profile.styl
@@ -4,5 +4,6 @@
     margin-top 0
     font-size 1.14rem
     line-height 1.365rem
+    word-break normal
   &__content_font-weight_bold
     font-weight bold
