--- a/source/blocks/summary/summary.styl
+++ b/source/blocks/summary/summary.styl
@@ -3,6 +3,7 @@
   max-width 91.42rem
   min-height 129.285rem
   margin 0 auto
+  word-break break-all
   &__column_position_left
     float left
     width 30.425rem
